# drone-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.yml  notice_template.txt
Examples/: README.md  lidar_map.bt  orbslam3_map.bt
PCB/Flight Controller/: Design Rule Check - Flight Controller.drc  Design Rule Check - Flight Controller.html  Status Report.Txt
PCB/Flight Controller/BOM/: Bill of Materials-Flight Controller.xlsx
PCB/Flight Controller/Pick Place/: Pick Place for Flight Controller.csv  Pick Place for Flight Controller.txt
PCB/Multiranger Deck/: Status Report.Txt
PCB/Multiranger Deck/BOM/: Daughter-ToFDaughters_breakoff_small.xlsx  Main-ToF_Main.xlsx
PCB/Multiranger Deck/ExportSTEP/: ToFDaughters_breakoff_small.step  ToF_Main.step
PCB/Multiranger Deck/Gerber/: ToFDaughters_breakoff_small.EXTREP  ToFDaughters_breakoff_small.GBL  ToFDaughters_breakoff_small.GBO  ToFDaughters_breakoff_small.GBP  ToFDaughters_breakoff_small.GD1  ToFDaughters_breakoff_small.GM  ToFDaughters_breakoff_small.GM4  ToFDaughters_breakoff_small.GPT  ToFDaughters_breakoff_small.GTO  ToFDaughters_breakoff_small.GTP  ToFDaughters_breakoff_small.REP  ToFDaughters_breakoff_small_Board_Shape.gbr  ToFDaughters_breakoff_small_Copper_Signal_Bot.gbr  ToFDaughters_breakoff_small_Copper_Signal_Top.gbr  ToFDaughters_breakoff_small_Drawing_1.gbr  ToFDaughters_breakoff_small_Drillmap_1.gbr  ToFDaughters_breakoff_small_Legend_Bot.gbr  ToFDaughters_breakoff_small_Legend_Top.gbr  ToFDaughters_breakoff_small_Pads_Bot.gbr  (+41 more)
PCB/Optical Flow Deck/: Status Report.Txt
Software/GSC/ORB-SLAM/colcon_ws/src/cf3d_cloud_filters/: CMakeLists.txt  package.xml
Software/GSC/ORB-SLAM/colcon_ws/src/cf3d_cloud_filters/src/: temporal_pc_filter.cpp
Software/GSC/ORB-SLAM/colcon_ws/src/cf3d_nav/: package.xml  setup.cfg  setup.py
Software/GSC/ORB-SLAM/colcon_ws/src/cf3d_nav/cf3d_nav/: explorer3d.py  voxelizer.py
Software/GSC/ORB-SLAM/colcon_ws/src/cf3d_nav/launch/: cf3d_nav_full.launch.py  octomap_mapping.launch.py
Software/comms scripts/: ChatGPT-jitter-recommendations.md
comms scripts/: Pi-Startup-Script.service  README.md
comms scripts/Beacon/: discover_gs.py  gs-beacon.service  gs_beacon_RevA.py  gs_beacon_RevB.py
comms scripts/David's testing/: Rpi-wifi.md  basic-comms.md
comms scripts/Startup/: Pi-Startup-FFmpeg.service_RevB.service  Pi-Startup-FFmpeg.service_RevC.service
comms scripts/UART/: discovery.py  notes_on_uart_testing.txt  sniffer.py  uart_receiver.py
comms scripts/Vido_Uplink/: ffmpeg_uplink_RevB.bash  ffmpeg_uplink_RevC.bash  ffmpeg_uplink_RevD.bash
firmware/: Codebase-Notes.md  Modifications-Register.md  README.md
firmware/testing/multiranger_ULD-API/components/drivers/i2c_devices/vl53l1/: CMakeLists.txt  vl53l1x.c
firmware/testing/multiranger_ULD-API/components/drivers/i2c_devices/vl53l1/include/: vl53l1x.h
frame/STEP files/: Big_leg_V2_light.step  Bottom_Plate_V5_light.step  Frnt_Guard_V6_filround.step  Main_Frame_V9_escm.step  Rear_Guard_V6_fixedmaybe.step  Test_leg_1.step  Top_Deck_V6_protective.step
(+333 files in other folders)
